--- a/index.html
+++ b/index.html
@@ -572,21 +572,24 @@
 		<div id="write" class="main_div">
 			<div>
 				<div>
-					朝ごはんを書き出そう<br>
+					ユーザーニーズを考えよう <br>
 					～考える視点～
 					<ul>
-						<li>手軽に済ませられるもの</li>
-						<li>食物繊維が含まれているもの</li>
+						<li>どんな問題がある？</li>
+						<li>誰のため？</li>
+						<li>ユーザーが求めてるのは？</li>
+						<li>ユーザーが大切にしてることは？<\li>
+						<li>どこまでするとユーザーは満足しそう？</li>
 					</ul>
 				</div>
 			</div>
 			<div>
 				<div>
-					昼ごはんを書き出そう<br>
+					制約条件を考えよう<br>
 					～考える視点～
 					<ul>
-						<li>短時間で食べられるもの</li>
-						<li>食堂の日替わりメニューでも可</li>
+						<li>どんな制約条件がある？</li>
+						<li>調整できる制約条件は？</li>
 					</ul>
 				</div>
 			</div>
