--- a/index.html
+++ b/index.html
@@ -612,10 +612,10 @@
 	<div>
 		<div id="select" class="main_div">
 			<div>
-				<p>朝ごはんの取捨選択をしよう</p>
+				<p>ユーザーニーズの取捨選択をしよう</p>
 			</div>
 			<div>
-				<p>昼ごはんの取捨選択をしよう</p>
+				<p>制約条件の取捨選択をしよう</p>
 			</div>
 			<div>
 				<p>夜ごはんの取捨選択をしよう</p>
