--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
 						<li>どんな問題がある？</li>
 						<li>誰のため？</li>
 						<li>ユーザーが求めてるのは？</li>
-						<li>ユーザーが大切にしてることは？<\li>
+						<li>ユーザーが大切にしてることは？</li>
 						<li>どこまでするとユーザーは満足しそう？</li>
 					</ul>
 				</div>
