--- a/index.html
+++ b/index.html
@@ -617,9 +617,9 @@
 			<div>
 				<p>制約条件の取捨選択をしよう</p>
 			</div>
-			<div>
-				<p>夜ごはんの取捨選択をしよう</p>
-			</div>
+			#<div>
+			#	<p>夜ごはんの取捨選択をしよう</p>
+			#</div>
 		</div>
 		<div class="button">
 			<svg  class="next" viewbox="0 0 2425 474" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" overflow="hidden"><defs><clipPath id="clip0"><rect x="981" y="1137" width="2425" height="474"/></clipPath></defs><g clip-path="url(#clip0)" transform="translate(-981 -1137)"><path d="M1001.5 1373.5 1597.5 1373.5 1597.5 1139.5 2789.5 1139.5 2789.5 1373.5 3385.5 1373.5 2193.5 1607.5Z" stroke="#000000" stroke-width="4.58333" stroke-miterlimit="8" fill="#FFFFFF" fill-rule="evenodd"/></g></svg>
@@ -634,9 +634,9 @@
 		<div id="control_main_2" class="control_main arrow_set">
 			<svg viewbox="0 0 725 278" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" overflow="hidden"><defs><clipPath id="clip0"><rect x="2198" y="974" width="725" height="278"/></clipPath></defs><g transform="translate(-2198 -974)"><path d="M2484.58 1090.08 2635.83 1090.08 2635.83 1135.92 2484.58 1135.92ZM2507.5 1181.75 2370 1113 2507.5 1044.25ZM2612.92 1044.25 2750.42 1113 2612.92 1181.75Z"/><path d="M2200.5 1056.83C2200.5 1041.19 2213.19 1028.5 2228.83 1028.5L2342.17 1028.5C2357.81 1028.5 2370.5 1041.19 2370.5 1056.83L2370.5 1170.17C2370.5 1185.81 2357.81 1198.5 2342.17 1198.5L2228.83 1198.5C2213.19 1198.5 2200.5 1185.81 2200.5 1170.17Z" stroke="#000000" stroke-width="4.58333" stroke-miterlimit="8" fill-rule="evenodd"/><path d="M2750.5 1056.83C2750.5 1041.19 2763.19 1028.5 2778.83 1028.5L2892.17 1028.5C2907.81 1028.5 2920.5 1041.19 2920.5 1056.83L2920.5 1170.17C2920.5 1185.81 2907.81 1198.5 2892.17 1198.5L2778.83 1198.5C2763.19 1198.5 2750.5 1185.81 2750.5 1170.17Z" stroke="#000000" stroke-width="4.58333" stroke-miterlimit="8" fill-rule="evenodd"/></g></svg>
 		</div>
-		<div id="control_main_3" class="control_main">
+		#<div id="control_main_3" class="control_main">
 			<svg version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" xml:space="preserve"><g><path class="st0" d="M243.591,309.362c3.272,4.317,7.678,6.692,12.409,6.692c4.73,0,9.136-2.376,12.409-6.689l89.594-118.094 c3.348-4.414,4.274-8.692,2.611-12.042c-1.666-3.35-5.631-5.198-11.168-5.198H315.14c-9.288,0-16.844-7.554-16.844-16.84V59.777 c0-11.04-8.983-20.027-20.024-20.027h-44.546c-11.04,0-20.022,8.987-20.022,20.027v97.415c0,9.286-7.556,16.84-16.844,16.84 h-34.305c-5.538,0-9.503,1.848-11.168,5.198c-1.665,3.35-0.738,7.628,2.609,12.046L243.591,309.362z"></path><path class="st0" d="M445.218,294.16v111.304H66.782V294.16H0v152.648c0,14.03,11.413,25.443,25.441,25.443h461.118 c14.028,0,25.441-11.413,25.441-25.443V294.16H445.218z" ></path></g></svg>
-		</div>
+		#</div>
 	</div>
 </body>
 </html>
