--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
 			-->
 		</div>
 		<div class="button">
-			<svg  class="next" viewbox="0 0 2425 474" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" overflow="hidden"><defs><clipPath id="clip0"><rect x="981" y="1137" width="2425" height="474"/></clipPath></defs><g clip-path="url(#clip0)" transform="translate(-981 -1137)"><path d="M1001.5 1373.5 1597.5 1373.5 1597.5 1139.5 2789.5 1139.5 2789.5 1373.5 3385.5 1373.5 2193.5 1607.5Z" stroke="#000000" stroke-width="4.58333" stroke-miterlimit="8" fill="#FFFFFF" fill-rule="evenodd"/></g></svg>
+			<svg  class="next" viewbox="0 0 2425 474" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" overflow="hidden"><defs><clipPath id="clip0"><rect x="981" y="1137" width="2425" height="474"/></clipPath></defs><g clip-path="url(#clip0)" transform="translate(-981 -1137)"><path d="M1001.5 1373.5 1597.5 1373.5 1597.5 1139.5 2789.5 1139.5 2789.5 1373.5 3385.5 1373.5 2193.5 1607.5Z" stroke="#000000" stroke-width="4.58333" stroke-miterlimit="8" fill="#FFFFFF" fill-rule="evenodd"/><text font-family="Yu Gothic,Yu Gothic_MSFontService,sans-serif" font-weight="700" font-size="367" transform="matrix(1 0 0 1 1850 1480)">次へ</text></g></svg>
 		</div>
 	</div>
 
@@ -626,7 +626,7 @@
 			-->
 		</div>
 		<div class="button">
-			<svg  class="next" viewbox="0 0 2425 474" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" overflow="hidden"><defs><clipPath id="clip0"><rect x="981" y="1137" width="2425" height="474"/></clipPath></defs><g clip-path="url(#clip0)" transform="translate(-981 -1137)"><path d="M1001.5 1373.5 1597.5 1373.5 1597.5 1139.5 2789.5 1139.5 2789.5 1373.5 3385.5 1373.5 2193.5 1607.5Z" stroke="#000000" stroke-width="4.58333" stroke-miterlimit="8" fill="#FFFFFF" fill-rule="evenodd"/></g></svg>
+			<svg  class="next" viewbox="0 0 2425 474" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" overflow="hidden"><defs><clipPath id="clip0"><rect x="981" y="1137" width="2425" height="474"/></clipPath></defs><g clip-path="url(#clip0)" transform="translate(-981 -1137)"><path d="M1001.5 1373.5 1597.5 1373.5 1597.5 1139.5 2789.5 1139.5 2789.5 1373.5 3385.5 1373.5 2193.5 1607.5Z" stroke="#000000" stroke-width="4.58333" stroke-miterlimit="8" fill="#FFFFFF" fill-rule="evenodd"/><text font-family="Yu Gothic,Yu Gothic_MSFontService,sans-serif" font-weight="700" font-size="367" transform="matrix(1 0 0 1 1850 1480)">次へ</text></g></svg>
 		</div>
 	</div>
 
