--- a/index.html
+++ b/index.html
@@ -590,6 +590,7 @@
 					<ul>
 						<li>どんな制約条件がある？</li>
 						<li>調整できる制約条件は？</li>
+						<li>自分で出来そうな範囲は？</li>
 					</ul>
 				</div>
 			</div>
